# uc-project-tweepy

./: README.md  pyproject.toml
tweepy_project/: Taskfile.yml  app.py  environment.py  main.py
tweepy_project/application/: app.py
tweepy_project/domain/: port.py
tweepy_project/infrastructure/: analizer.py  requests.py  utils.py
