[tool.poetry]
name = "tweepy-project"
version = "0.1.0"
description = ""
authors = ["Daprion <bulla.d.david@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tweepy = "^4.15.0"
nltk = "^3.9.1"
matplotlib = "^3.10.3"
wordcloud = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
